# fundi-construction-estimator

./: .dockerignore  .gitignore  Aptfile  Dockerfile  MEMORY_MANAGEMENT.md  README.md  RETRY_SYSTEM_DOCS.md  STORAGE_SETUP.sql  SUPABASE_SETUP.sql  TRANSFORMATION_SUMMARY.md  __init__.py  agent_runner.py  api_server.py  estimate_delivery.py  gcp-credential-config.json  main.py  memory_demo.py  pyproject.toml  requirements.txt  test_boq_system.py  test_decoupled_agent.py  test_email.py  test_memory_system.py  test_pdf_parity.py  test_persistence.py  test_template.py
.agents/: AGENTS.md
.agents/skills/agent_testing/: SKILL.md
.agents/skills/cost_estimation/: SKILL.md
.agents/skills/frontend_sync/: SKILL.md
.agents/skills/gcp_migration/: SKILL.md
.agents/skills/lead_capture/: SKILL.md
.agents/skills/pdf_email_delivery/: SKILL.md
.agents/skills/supabase_integration/: SKILL.md
.github/workflows/: deploy.yml
agents/fundi_estimator/: __init__.py  agent.py  boq_calculator.py  instructions.txt  kenya_construction_costs.py
agents/website_builder_simple/: agent.py  description.txt  instructions.txt  kenya_construction_costs.py
scripts/: gcp_setup.ps1  gcp_setup.sh
templates/: boq_template.html  estimate_template.html
tools/: file_writer_tool.py  price_cache_manager.py  web_search_tool.py
utils/: conversation_memory.py  estimate_handler.py  excel_boq_generator.py  file_session_service.py  memory_manager.py  retry_config.py  supabase_session_service.py
