[project]
name = "version-1-wesbite-builder-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.2.1",
    "google-genai>=1.19.0",
    "fastapi>=0.118.3",
    "slowapi>=0.1.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "supabase>=2.24.0",
    "jinja2>=3.1.0",
    "weasyprint>=67.0",
    "requests>=2.32.4",
    "email-validator>=2.2.0",
    "rich>=14.0.0",
]
